# fragments-kit

./: .gitignore  README.md  SKILL.md  main.py  pyproject.toml
.github/workflows/: pypi-publish.yml  pypi-test-publish.yml
fragments/: __init__.py  fragments.py
fragments_kit/: fragments.json  fragments.py
samples/: BasicHouse.frag
